kubernetes/apps/external/amp/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: amp
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
