kubernetes/apps/external/amp/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amp
  namespace: external
  annotations:
    external-dns.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: AMP.png
    gethomepage.dev/name: AMP
    gethomepage.dev/group: Home
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "amp.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: amp
                port:
                  number: 8080
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: amp
  namespace: external
subsets:
  - addresses:
      - ip: ${AMP_IP}
    ports:
      - name: http
        port: 8080
        protocol: TCP
